# src/validators/user.validator.js
@@ -49,3 +49,10 @@ module.exports.getAllViewListByTopic = Joi.object({
   pageNo: Joi.number().required().error(new Error(messages.INVALID_PAGE)),
   limit: Joi.number().required().error(new Error(messages.INVALID_LIMIT)),
 });
+
+module.exports.updateUserProfile = Joi.object({
+  email: Joi.string().email().optional().trim(),
+  firstName: Joi.string().optional().trim(),
+  lastName: Joi.string().optional().trim(),
+  employeeId: Joi.string().optional().trim()
+});
